# solana-accountgen

./: .gitignore  Cargo.toml  README.md  aisettings
examples/: anchor_program_test.rs  basic_usage.rs  pda_example.rs  program_test.rs
programs/your-program/src/: lib.rs
src/: account_builder.rs  account_map.rs  error.rs  lib.rs  main.rs
src/extensions/: anchor.rs  banks_client.rs  genesis.rs  mod.rs  program_loader.rs  program_test.rs  sysvars.rs  token.rs
src/serialization/: bincode.rs  borsh.rs  mod.rs
tests/: anchor_tests.rs  cli_tests.rs
