[package]
name = "solana-accountgen"
version = "0.1.0"
edition = "2024"
description = "A utility crate for generating mock Solana accounts in tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dvrvsimi/solana-accountgen"
readme = "README.md"
keywords = ["solana", "blockchain", "testing", "anchor", "accounts"]
categories = ["development-tools::testing", "blockchain"]
authors = ["sarugami <daraakojede01@gmail.com>"]
documentation = "https://docs.rs/solana-accountgen"
homepage = "https://github.com/dvrvsimi/solana-accountgen"

[lib]
name = "solana_accountgen"
path = "src/lib.rs"

[[bin]]
name = "solana-accountgen"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
solana-program = "2.2.1"
solana-sdk = "2.2.2"
solana-program-test = "2.2.6"
borsh = "1.5.7"
thiserror = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.13.0"
hex = "0.4.3"
serde_json = "1.0"
sha2 = "0.10.8"


clap = { version = "4.3", features = ["derive"], optional = true }

[dev-dependencies]
solana-program-test = "2.2.6"
tokio = { version = "1", features = ["full"] }
assert_cmd = "2.0.4"
predicates = "3.1.3"

serde_json = "1.0"
