[package]
name = "solana-accountgen"
version = "0.1.2"
edition = "2024"
description = "A utility crate for generating mock Solana accounts in tests"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dvrvsimi/solana-accountgen"
readme = "README.md"
keywords = ["solana", "testing", "anchor", "accounts"]
categories = [
    "development-tools::testing",
    "simulation",
    "finance",
    "cryptography::cryptocurrencies",
]
authors = ["sarugami <daraakojede01@gmail.com>"]
documentation = "https://docs.rs/solana-accountgen"
homepage = "https://github.com/dvrvsimi/solana-accountgen"

[lib]
name = "solana_accountgen"
path = "src/lib.rs"

[[bin]]
name = "solana-accountgen"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["clap"]

[dependencies]
base64 = "0.13.0"
borsh = "1.5.7"
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.8"
solana-account = "2.2.1"
solana-instruction = "2.2.1"
solana-program-test = "2.2.6"
solana-pubkey = "2.2.1"
solana-rent = "2.2.1"
solana-sdk-ids = "2.2.1"
thiserror = "2.0.1"


clap = { version = "4.3", features = ["derive"], optional = true }

[dev-dependencies]
assert_cmd = "2.0.4"
predicates = "3.1.3"
serde_json = "1.0"
solana-account-info = "2.2.1"
solana-clock = "2.2.1"
solana-keypair = "2.2.1"
solana-program-error = "2.2.1"
solana-signer = "2.2.1"
solana-transaction = "2.2.1"
tokio = { version = "1", features = ["time"] }
